<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Out of Android</string>
    <string name="auto_responder_title">Auto Call Responder</string>
    <string name="enable_auto_response">Enable Auto Response</string>
    <string name="default_message">Sorry, I\'m currently unavailable. I\'ll get back to you soon!</string>
    <string name="custom_message_hint">Enter your custom auto-response message</string>
    <string name="save_message">Save Message</string>
    <string name="permissions_required">Permissions Required</string>
    <string name="grant_permissions">Please grant phone and SMS permissions for the app to work</string>
    <string name="settings">Settings</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="notification_title">Auto Responder Active</string>
    <string name="notification_text">Automatically responding to calls</string>
    <string name="schedule_icon_description">Schedule indicator</string>
</resources>